--- a/css/main.css
+++ b/css/main.css
@@ -22,27 +22,47 @@ p {
     text-align: center;    
 }
 
-.form-group {
-    margin-left: 420px;
-    width:35%;
-    text-align: center;
+.form-inline {
+    margin-left:395px;
+    padding-bottom: 40px;
 }
 
-input {
-    width:100%;
-    height:33px;
+#userSubmit {
+    width:510px;
+    height:34px;
     border-radius: 4px;
     border-color:rgb(133, 133, 133);
     border-width: 1px;
 }
 
-button {
-    margin-top: -38px;
-    margin-right: 393px;
-    float: right;
-    background-color: #007bff;
-    color: white;
-    height:38px;
-    border-radius: 4px;
-    border-width: 0px;
+.btn {
+    margin-top:8px;
+    margin-left:-15px;
+    height:35px;
+}
+
+#imagem {
+    width:50%;
+}
+
+#imagem img {
+    width: 40%;
+    border-radius: 50%;
+    margin-left:20px;
+}
+
+#imagem p {
+    text-align: center;
+    width: 50%
+}
+
+#description h2 {
+    margin-left: -500px;
+    margin-top: 30px;
+}
+
+#description p {
+    margin-left: -445px;
+    margin-top: -20px;
+    font-size: 12px;
 }
